# cadenza-shell

./: .cocoa.toml  .commitlintrc.yml  .gitignore  AGENTS.md  Cargo.toml  RELM4_MIGRATION_PLAN.md  RELM4_MIGRATION_STATUS.md  RUST_MIGRATION.before.md  RUST_MIGRATION.md  app.ts  biome.json  build.rs  devenv.nix  devenv.yaml  flake.nix  package-lock.json  package.json  secretspec.toml  style.scss  test_notifications.sh  tsconfig.json  typos.toml
src/: analog_clock.rs  app.rs  app.ts  app_new.rs  app_relm4.rs  bar.tsx  battery.rs  bluetooth.rs  bluetooth_menu.rs  brightness.rs  commands.rs  constants.ts  main.rs  mpris.rs  network.rs  network_menu.rs  niri.rs  notifications.rs  pulseaudio.rs  services.rs  settings.rs  simple_app.rs  sleep_monitor.rs  sound.rs  style.rs  style.scss  tiles.rs  utils.rs  utils.tsx  weather.rs  widgets.rs  wifi-menu.tsx  wifi_menu.rs
src/battery/: alerts.rs  charging.rs  cpu.rs  cv_fit.rs  discharging.rs  features.rs  history.rs  model.rs  persistence.rs  predictor.rs  profile.rs  sysfs.rs  udev.rs  watcher.rs
src/battery/charging/: consts.rs  cv_fit.rs  profile.rs  session.rs
src/commands/: integration.rs
src/network/: dbus.rs  types.rs
src/notifications/: card.rs  center.rs  daemon.rs  fresh.rs  fresh_notifications.rs  mod.rs  mod.rs.orig  notification-center.tsx  notification_card.rs  notification_card_relm4.rs  notification_center.rs  notification_center.rs.orig  notification_popup.rs  notification_popup_relm4.rs  notifications.tsx  panel.rs  types.rs
src/services/: audio.rs  battery.rs  battery_worker.rs  bluetooth.rs  brightness.rs  clock.rs  hyprland.rs  mpris.rs  network.rs  niri.rs  notifications.rs  pulseaudio.rs  tray.rs  weather.rs
src/style/: theme.rs
src/tests/: mod.rs  multi_monitor.rs
src/tiles/: battery.rs  battery_new.rs  battery_relm4.rs  bluetooth.rs  bluetooth.tsx  bluetooth_relm4.rs  brightness.rs  brightness.tsx  brightness_relm4.rs  clock.rs  clock_relm4.rs  mpris.rs  mpris.tsx  mpris.tsx.orig  mpris_relm4.rs  network.rs  network.tsx  network_relm4.rs  niri.rs  notifications.rs  notifications.tsx  notifications_relm4.rs  pulseaudio.rs  simple_battery.rs  tray.rs  tray.rs.orig  tray.tsx  tray_relm4.rs  volume.rs  volume.tsx  volume_relm4.rs  weather.rs  weather_relm4.rs
src/tray/: mod.rs
src/tray/status_notifier/: host.rs  item.rs  watcher.rs
src/utils/: icons.rs
src/weather/: types.rs
src/widget/: analog-clock.tsx  bar.tsx  battery.tsx  brightness.tsx  clock.tsx  network.tsx  utils.tsx  volume.tsx
src/widget/notifications/: notification-card.tsx  notification-center.tsx  notification-tile.tsx  notifications.tsx
src/widget/weather/: index.tsx
src/widgets/: bar.rs  bar.tsx  bar_new.rs  bar_relm4.rs  clock.tsx  minimal_bar.rs  network.tsx  progress_tile.rs  simple_bar.rs  tile.rs  tray_item.rs  utils.tsx
src/widgets/bar/: center.rs  left.rs  right.rs
src/widgets/notifications/: notification-center.tsx  notification-tile.tsx
src/widgets/tiles/: battery.tsx  brightness.tsx  clock.tsx  hyprland.tsx  network.tsx  notifications.tsx
src/widgets/tiles/weather/: index.tsx
widget/: bar.tsx  battery.tsx  bluetooth.tsx  brightness.tsx  clock.tsx  hyprland.tsx  mpris.tsx  network.tsx  progress.tsx  tray.tsx  utils.tsx  volume.tsx
widget/notifications/: notification-card.tsx  notifications.tsx
widget/weather/: icons.ts  index.ts  index.tsx
