[package]
name = "muse-shell"
version = "0.1.0"
edition = "2024"
description = "muni's desktop shell - A modern desktop shell built with Rust and GTK4"

[dependencies]
# GTK and UI
gtk4 = { version = "0.10", features = ["v4_14"] }
gtk4-layer-shell = "0.6"
glib = "0.21"
gio = "0.21"
gdk4 = { version = "0.10", features = ["v4_14"] }
pango = "0.21"
rsass = "0.29"

# Relm4 - Modern GTK4 framework
relm4 = { version = "0.10", features = ["macros"] }
relm4-components = "0.10"
relm4-icons = { git = "https://github.com/muni-corn/relm4-icons", branch = "more-fluent-icons" }

# Async and concurrency
tokio = { version = "1", features = ["full"] }
async-channel = "2.3"

# System integration
zbus = { version = "5", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }

# System monitoring
futures-lite = { version = "2", default-features = false }
inotify = "0.11"
notify = "8"
systemstat = "0.2"

# Bluetooth
bluer = { version = "0.17", features = ["full"] }

# Audio
pulse = { version = "2.30", package = "libpulse-binding" }
niri-ipc = "25.8.0"
mpris = "2.0.1"

[build-dependencies]
glib-build-tools = "0.21"
relm4-icons-build = { git = "https://github.com/muni-corn/relm4-icons", branch = "more-fluent-icons" }

[features]
default = []
docs = []
# networkmanager = ["nm-rs"]
# audio = ["pipewire", "wireplumber"]
