[package]
name = "cadenza-shell"
version = "0.1.0"
edition = "2024"
description = "muni's desktop shell - a modern desktop shell built with Rust and GTK4"

[dependencies]
anyhow = "1"
async-channel = "2.3"
bluer = { version = "0.17", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4.0"
dirs = "6.0.0"
env_logger = "0.11"
futures-lite = { version = "2", default-features = false }
gdk4 = { version = "0.10", features = ["v4_14"] }
gio = "0.21"
glib = "0.21"
gtk4 = { version = "0.10", features = ["v4_14"] }
gtk4-layer-shell = "0.7"
inotify = "0.11"
log = { version = "0.4", features = ["release_max_level_info"] }
mpris = "2.0.1"
niri-ipc = "25.8.0"
pango = "0.21"
pulse = { version = "2.30", package = "libpulse-binding" }
relm4 = { version = "0.10.1", features = ["libadwaita", "adw"] }
relm4-components = "0.10"
relm4-icons = { git = "https://github.com/muni-corn/relm4-icons", branch = "more-fluent-icons" }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
rsass = "0.29"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1"
serde_repr = "0.1"
system-tray = "0.8.3"
systemstat = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
udev = { version = "0.9.3", features = ["send", "sync"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[build-dependencies]
glib-build-tools = "0.21"
relm4-icons-build = { git = "https://github.com/muni-corn/relm4-icons", branch = "more-fluent-icons" }

[features]
default = []
docs = []
